--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "node_modules/.bin/gulp build",
     "clean": "node_modules/.bin/gulp clean",
     "dev": "node_modules/.bin/gulp dev",
-    "test": "node_modules/.bin/gulp test"
+    "test": "node_modules/.bin/gulp test",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
